# I_have_school_deno

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  FROZEN_FILES.md  GEMINI.md  README.md  antigravity_llm.txt  biome.json  client.ts  deno.json  file.todo  fresh_llm.txt  ledger.json  main.ts  package.json  playwright.config.ts  utils.ts  vite.config.ts  vitest.config.ts
.agent/workflows/: sovereign-development.md
.github/: copilot-instructions.md
content/: lesson-demo.mdx
desktop/: Cargo.toml  README.md
docs/: COMMANDS_REFERENCE.md  GIT_BISECT_GUIDE.md  PROJECT_STRUCTURE_LESSONS.md  TAGGING_STRATEGY.md  TUTORIAL.md  anti_logic_drift_principles.txt  deno-webui-plan.txt  file.todo  file_reference.txt  project_laws.txt  project_overview.txt
islands/: KatexMath.tsx  LessonSheet.tsx  LessonToc.tsx  MathStage.tsx  Sidebar.tsx  TitleBar.tsx  VolumeSimulator.tsx
lib/: exercise-loader.test.ts  exercise-loader.ts  msgpack-loader.ts  native.ts  schemas.ts  state.test.ts  state.ts  types.ts  validation.test.ts  validation.ts  wasm-health-check.test.ts  wasm-health-check.ts  wasm-loader.ts
math-engine/: Cargo.toml
math-engine/src/: lib.rs
math-engine/tests/: purity_test.rs
native/: Cargo.toml
routes/: [...slug].tsx  _404.tsx  _app.tsx  geometry.tsx  index.tsx  mdx-demo.tsx
scripts/: bisect-verify.ts  snapshot-css-tokens.ts  snapshot-island-contracts.ts  snapshot-lib-contracts.ts  snapshot-physics.ts  snapshot-state.ts  snapshot-ui.ts  verify-boundaries.ts  verify-ledger.ts  verify-snapshots.ts
static/: discord.css
utils/: lesson_registry.ts
(+45 files in other folders)
