[package]
name = "math_validator"
version = "0.1.0"
edition = "2021"
description = "WASM math validation engine for Sovereign Academy"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"       # Optimize for smallest size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization at cost of compile time
strip = true          # Strip debug symbols
